<resources>
    <string name="app_name">Vehicle service</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="login_button_text">Login</string>
    <string name="login_page_title">Enter Your Details</string>
    <string name="empty_notify">Name and phone number cannot be null</string>
    <string name="register_button_text">Register(For Service centers)</string>
    <string name="service_name_hint">Service Center Name</string>
    <string name="place_hint">Place</string>
    <string name="district_hint">District</string>
    <string name="pin_hint">Pin</string>
    <string name="register_btn_text">Register</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="heavy">Heavy</string>
    <string name="four_wheeler">Four Wheeler</string>
    <string name="three_wheeler">Three Wheeler</string>
    <string name="two_wheeler">Two Wheeler</string>
    <string name="licence">licence</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="save_settings">Save Settings</string>
    <string name="domain">Domain</string>
    <string name="working_days">Working days</string>
    <string name="open_hours">Open Hours</string>
    <string name="distance">Distance</string>
    <string name="pincode">Pincode</string>
    <string name="address">Address</string>
    <string name="name">Name</string>

</resources>
