<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.hashcod.project.RegisterActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout

        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:paddingBottom="20dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/login_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/servicecentername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/service_name_hint"/>
    <EditText
        android:id="@+id/placeservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_hint"/>
    <EditText
        android:id="@+id/districtservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/district_hint"/>
    <EditText
        android:id="@+id/pinservice"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin_hint"/>
        <EditText
            android:id="@+id/openhourset"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Open Hours"/>

        <EditText
            android:id="@+id/licenseservice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/licence"/>
        <EditText
            android:id="@+id/phoneservicescenter"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"/>

        <Button
            android:id="@+id/chooselocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Location"/>
    <TextView

        android:padding="20dp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="@string/vehicle_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
    <CheckBox
       android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
       <TextView
           android:gravity="center"
           android:text="@string/two_wheeler"
           android:layout_width="wrap_content"
           android:layout_height="match_parent" />
   </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:text="@string/three_wheeler"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:text="@string/four_wheeler"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <CheckBox
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:gravity="center"
            android:text="@string/heavy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn_text"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
