<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.hashcod.project.MainActivity">

    <TextView
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/login_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:inputType="textCapWords"
        android:id="@+id/nametext"
        android:hint="@string/hint_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_weight="2"
        android:inputType="phone"
        android:id="@+id/phonenumbertext"
        android:hint="@string/hint_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <ImageButton
            android:layout_weight="1"
            android:id="@+id/piccontact"
            android:src="@android:drawable/sym_contact_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button

        android:id="@+id/loginbutton"
        android:text="@string/login_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
